# FunKiiU

./: .gitignore  .pre-commit-config.yaml  FunKiiU.py  README.md  download.sh  pyproject.toml  server.sh  tox.ini
