[tool.poetry]
name = "funkiiu"
version = "1.0.0"
description = "An immutable OS builder"
authors = ["Nuno Santos <eu.nuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
unidecode = "1.3.6"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "1.7.5"}
black = "23.7.0"
pylama = {extras = ["eradicate", "mypy", "toml"], version = "8.4.1"}

[tool.bandit]
skips = ["B103", "B108", "B404", "B603", "B606"]

[tool.black]
line-length = 150

[tool.pylama]
linters = "eradicate,mccabe,mypy,pycodestyle,pyflakes,pylint"
max_line_length = 150
ignore = "C0114,C0115,C0116,R0903,R0914"

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
